# company-manager-agent

./: LICENSE  README.md  pyproject.toml
company_manager/: __init__.py  db.py  models.py  seed.py  tooling.py
data/: company_manager.db
openclaw_skills/company-manager/: SKILL.md
scripts/: company_manager_tool.py  migrate.py  seed_demo_data.py
